# libipcam_base

./: .gitignore  Makefile.am  configure.ac
src/: Makefile.am  Makefile.in  action_handler.c  action_handler.h  app.c  app.h  base_app.c  base_app.h  base_service.c  base_service.h  config_manager.c  config_manager.h  event_handler.c  event_handler.h  lib.c  libipcam_base-0.1.0.pc.in  libipcam_base-0.1.00.pc.in  libipcam_base.h  libipcam_base.h~  message.c  message.h  message_manager.c  message_manager.h  messages.h  notice_message.c  notice_message.h  poller.c  poller.h  request_message.c  request_message.h  response_message.c  response_message.h  service.c  service.c~  service.h  service.h~  socket_manager.c  socket_manager.h  timer.c  timer_manager.c  (+5 more)
tests/: Makefile.am  app.c  app.h  app1.c  app1.h  test_action_handler.c  test_action_handler.h  test_base_app.c  test_base_app1.c  test_event_handler.c  test_event_handler.h  test_notice_message.c  test_request_message.c  test_service.c  test_timer_pump.c
