dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(libipcam_base, 0.1.00)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CC





LT_INIT


PKG_CHECK_MODULES(LIBIPCAM_BASE, [libzmq libxml-2.0 gobject-2.0 ])




AC_OUTPUT([
Makefile
src/libipcam_base-0.1.00.pc
src/Makefile
])
