dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(libipcam_base, 0.1.0)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CC





LT_INIT


PKG_CHECK_MODULES(LIBIPCAM_BASE, [libzmq libczmq gobject-2.0 yaml-0.1 json-glib-1.0])




AC_OUTPUT([
Makefile
src/libipcam_base-0.1.0.pc
src/Makefile
tests/Makefile
])
